Java: don't make loop variables final when splitting multiple declarations (IDEA-380295)
GitOrigin-RevId: 0d83b9f64eda019c7d0b2b75fd1221fe41a83877